--- a/CleanArc.API/appsettings.json
+++ b/CleanArc.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=CleanArcDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
