--- a/CleanArc.Application/CleanArc.Application.csproj
+++ b/CleanArc.Application/CleanArc.Application.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\CleanArc.Domain\CleanArc.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
