--- a/CleanArc.Infra.Data/CleanArc.Infra.Data.csproj
+++ b/CleanArc.Infra.Data/CleanArc.Infra.Data.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\CleanArc.Domain\CleanArc.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
